fix(style): hero padding on mobile

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -21,3 +21,9 @@
 header {
   height: auto;
 }
+
+@media (max-width: 1024px) {
+  header {
+    padding: 3rem 1.5rem !important;
+  }
+}
